--- a/public/styles-user.css
+++ b/public/styles-user.css
@@ -29,12 +29,25 @@ body {
     color: gray;
     font-size: 18px;
 }
-ul {
-    list-style-type: none;
-    padding: 0;
+.file-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
 }
-ul li {
-    margin-bottom: 10px;
+.file-card {
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+}
+.file-image {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+.file-name {
+    margin-top: 10px;
     color: black;
-    font-size: 18px;
+    font-size: 16px;
 }
