--- a/public/styles-user.css
+++ b/public/styles-user.css
@@ -13,7 +13,8 @@ body {
     padding: 20px;
     display: grid;
     justify-content: center;   
-    width: 450px;
+    width: 600px;
+    margin-top: 60px;
 }
 .sign-in {
     color: black;
@@ -30,7 +31,7 @@ body {
     font-size: 18px;
 }
 .file-cards {
-    display: grid;
+    display: block;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 20px;
     margin-top: 20px;
@@ -51,3 +52,54 @@ body {
     color: black;
     font-size: 16px;
 }
+
+.download-button {
+    background-image: url(download.png);
+    width: 28px;
+    height: 28px;
+}
+
+.download-button:hover{
+    background-color: gray;
+}
+
+.delete-button {
+    background-image: url(delete.png);
+    width: 28px;
+    height: 28px;
+}
+
+.delete-button:hover{
+    background-color: gray;
+}
+
+.upload-button {
+    background-image: url(upload.png);
+    width: 28px;
+    height: 28px;
+    margin-left: 22px;
+    margin-bottom: 0px;
+}
+
+.upload-button:hover{
+    background-color: gray;
+}
+
+.user-file {
+    display: flex;
+    justify-content: space-between;
+}
+
+.upload-form {
+    display: flex;
+}
+
+.upload-file{
+    display: flex;
+    justify-content: space-between;
+}
+
+input {
+    margin-top: 15px;
+}
+
